--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html lang="en">   
 <head>
-<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "ichiga", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
+<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "ichigk", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
@@ -44,7 +44,7 @@ POZNÁMKA: Souhlasíte s tím, že budete respektovat nahé ženy, které vidít
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://gomydates.com/tds/ae?tdsId=s7410sag_r&tds_campaign=s7410sag&s1=ps&utm_source=int&utm_sub=opnfnl&affid=5206e7e6&subid=team1&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">PŘIJÍMÁM</a>
+<a href="https://fbsecuredt.com/s?a=259152&sm=46375&co=319606&mt=16&s1=uu" class="step-btn submit-btn tr-submit-button showmail">PŘIJÍMÁM</a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
