--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <html lang="en">   
 <head>
 <script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "ichigk", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
@@ -24,8 +25,7 @@
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Nabízím sexuální služby, tanec a erotické masáže u vás doma. Chcete se podívat na můj katalog?
-.</div>
+Ofrezco mis servicios sexuales, baile y masajes eróticos a domicilio, quieres ver mi catálogo?.</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
 No
@@ -37,18 +37,17 @@ Si
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-POZNÁMKA: Souhlasíte s tím, že budete respektovat nahé ženy, které vidíte níže? Pokud někoho znáte, prosím, neříkejte nic a nešiřte fámy...
- </div>
+NOTA: ¿Estás de acuerdo en respetar a las mujeres desnudas que ves abajo? Si conoces a alguien, por favor, no lo digas y no difundas rumores... </div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://fbsecuredt.com/s?a=259152&sm=46375&co=319606&mt=16&s1=uu" class="step-btn submit-btn tr-submit-button showmail">PŘIJÍMÁM</a>
+<a href="https://fbsecuredt.com/s?a=259152&sm=46375&co=319606&mt=16&s1=uu" class="step-btn submit-btn tr-submit-button showmail">ACEPTO</a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-dimi.akamaized.net/landings/290389/1723020901/images/video-1.mp4" type="video/mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/286701/1707471632/images/5.mp4" type="video/mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
